Rebrand as SigmaDroid Launcher
Signed-off-by: Matt Filetto <matt.filetto@gmail.com>

--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -17,7 +17,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- Application name -->
-    <string name="crdroid_app_name" translatable="false">Alpha Launcher</string>
+    <string name="crdroid_app_name" translatable="false">SigmaDroid Launcher</string>
 
     <!-- Folder titles -->
     <string name="google_folder_title" translatable="false">Google</string>
@@ -210,11 +210,13 @@
     <string name="quickspace_date_format_minimalistic" translatable="false">EEEE, MMMM d</string>
 
     <!-- QuickSpace: QuickEvent: Device Intro Event -->
-    <string name="quick_event_rom_intro_welcome">Welcome to AlphaDroid!</string>
-    <string name="quick_event_rom_intro_welcome_ext">AlphaDroid time!</string>
+    <string name="quick_event_rom_intro_welcome">Welcome to SigmaDroid!</string>
+    <string name="quick_event_rom_intro_welcome_ext">SigmaDroid time!</string>
     <string-array name="welcome_message_variants">
         <item>Thank you for choosing us</item>
+        <item>Loving us? Send us a coffee</item>
         <item>Best Rom Ever.</item>
+        <item>Say hi to us on Telegram</item>
         <item>Tap here to begin</item>
         <item>We love you 3000</item>
     </string-array>
@@ -284,7 +286,7 @@
         <item>We didn\'t start the fire!</item>
         <item>Time for some good music</item>
         <item>\u003C\u003C\u003C\u003C\u003C\u003C\u003C HEAD</item>
-        <item>You need crDroid Alpha to see this</item>
+        <item>You need SigmaDroid Premium to see this</item>
         <item>Remember the Lineage of the Unicorn</item>
         <item>Enjoy Xtended battery life</item>
         <item>Starting from the ground zero</item>
