--- a/res/values-be-rBY/cr_strings.xml
+++ b/res/values-be-rBY/cr_strings.xml
@@ -163,10 +163,8 @@
     <string name="show_quickspace_title">З Першага Погляду</string>
     <string name="show_quickspace_summary">Паказваць у верхняй частцы экрана</string>
     <!-- QuickSpace: QuickEvent: Device Intro Event -->
-    <string name="quick_event_rom_intro_welcome">Сардэчна запрашаем у crDroid!</string>
-    <string name="quick_event_rom_intro_welcome_ext">Ідэнтыфікатар (ключ): quick_event_rom_intro_welcome_ext
-quick_event_rom_intro_welcome_ext
-Файл: cr_strings.xml</string>
+    <string name="quick_event_rom_intro_welcome">Сардэчна запрашаем у Alphadroid!</string>
+    <string name="quick_event_rom_intro_welcome_ext">Alphadroid time!</string>
     <string-array name="welcome_message_variants">
         <item>Thank you for choosing us</item>
         <item>Loving us? Send us a beer</item>
@@ -307,12 +305,12 @@ quick_event_rom_intro_welcome_ext
         <item>О, прывітанне, што здарылася?</item>
         <item>Засяродзьцеся на сваіх задачах</item>
         <item>Колькі скрыншотаў вы зрабілі?</item>
-        <item>Адкрыйце дабро з crDroid</item>
+        <item>Адкрыйце дабро з Alphadroid</item>
         <item>Распаўсюджвайце любоў, а не хаос</item>
         <item>Не мы распальвалі пажар!</item>
         <item>Час для добрай музыкі</item>
         <item>\u003C\u003C\u003C\u003C\u003C\u003C\u003C ГАЛАВА</item>
-        <item>Для гэтага вам патрэбен crDroid Premium</item>
+        <item>Для гэтага вам патрэбен Alphadroid Premium</item>
         <item>Памятайце Lineage і Unicorn</item>
         <item>Атрымлівайце асалоду ад тэрміну службы батарэі</item>
         <item>Пачынаючы з нуля</item>
