--- a/res/values-fi-rFI/cr_strings.xml
+++ b/res/values-fi-rFI/cr_strings.xml
@@ -163,8 +163,8 @@
     <string name="show_quickspace_title">Pikakatselu</string>
     <string name="show_quickspace_summary">Näytä aloitusnäytön yläosassa</string>
     <!-- QuickSpace: QuickEvent: Device Intro Event -->
-    <string name="quick_event_rom_intro_welcome">Tervetuloa crDroidiin!</string>
-    <string name="quick_event_rom_intro_welcome_ext">crDroid time!</string>
+    <string name="quick_event_rom_intro_welcome">Tervetuloa Alphadroidiin!</string>
+    <string name="quick_event_rom_intro_welcome_ext">Alphadroid time!</string>
     <string-array name="welcome_message_variants">
         <item>Thank you for choosing us</item>
         <item>Loving us? Send us a beer</item>
@@ -305,12 +305,12 @@
         <item>Oh hey, what\'s up?</item>
         <item>Keskity tehtäviisi</item>
         <item>How many screenshots do you take?</item>
-        <item>Avaa hyvyys crDroidilla</item>
+        <item>Avaa hyvyys Alphadroidilla</item>
         <item>Levitä rakkautta, älä tuhoa</item>
         <item>Emme aloittaneet tulta!</item>
         <item>Aika kuunnella hyvää musiikkia</item>
         <item>\u003C\u003C\u003C\u003C\u003C\u003C\u003C HEAD</item>
-        <item>Tarvitset crDroid Premiumin nähdäksesi tämän</item>
+        <item>Tarvitset Alphadroid Premiumin nähdäksesi tämän</item>
         <item>Remember the Lineage of the Unicorn</item>
         <item>Nauti Xtended akun kestosta</item>
         <item>Aloita alkupisteestä</item>
